# pine

./: .gitignore  Cargo.toml  Makefile  shader.wgsl
examples/: multiple_windows.rs  simple.rs
project-docs/: docs.typ  template.typ
src/: app.rs  error.rs  lib.rs  rendering.rs  shaders.rs  windowing.rs
src/app/: config.rs  event_processor.rs  mod.rs
src/app/events/: event_processor.rs
src/renderer/: mod.rs
src/renderer/backend/: mod.rs  wgpu.rs
src/renderer/backend/wgpu/: camera.rs  mod.rs  renderables.rs  shaders.rs
src/rendering/: color.rs  frame_data.rs  mod.rs  scene.rs
